cleaned data a bit and used larger dataset in recommender system

--- a/Spotify Data Extractor.ipynb
+++ b/Spotify Data Extractor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "70cfe77d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "665aab64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To export Spotify client id and Spotify client secret, type this in the terminal:\n",
+    "# export SPOTIPY_CLIENT_ID='your-spotify-client-id'\n",
+    "# export SPOTIPY_CLIENT_SECRET='your-spotify-client-secret'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "18114bde",
    "metadata": {},
    "outputs": [],
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "0f96d1a2",
    "metadata": {},
    "outputs": [],
@@ -137,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "8cebc9a6",
    "metadata": {},
    "outputs": [],
@@ -157,29 +169,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "8c6fab41",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_1 = pd.concat([metal_1, metal_2, hip_hop, pop_1, pop_2, k_pop, jazz, rnb, classical, EDM])\n",
     "df_1.drop_duplicates(inplace=True)\n",
-    "df_1.to_csv('songs1.csv')"
+    "df_1.to_csv('songs1.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "5cf29767",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(694, 19)"
+       "(693, 19)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "id": "fb91bd62",
    "metadata": {},
    "outputs": [],
@@ -199,22 +211,24 @@
     "pop_df = pd.read_csv('pop.csv')\n",
     "df_1 = pd.read_csv('songs1.csv')\n",
     "df = pd.concat([rock_df, pop_df, df_1])\n",
-    "df.drop_duplicates(inplace=True)"
+    "df.drop_duplicates(inplace=True)\n",
+    "df.drop_duplicates(subset=['id'], inplace=True)\n",
+    "df.to_csv('data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 26,
    "id": "c2019a0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1725, 20)"
+       "(1684, 19)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
