--- a/Music Recommender.ipynb
+++ b/Music Recommender.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5395a469",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "531e8962",
    "metadata": {},
    "outputs": [],
@@ -26,20 +26,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b915ea9c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>album</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>id</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Purple Haze</td>\n",
+       "      <td>Are You Experienced</td>\n",
+       "      <td>Jimi Hendrix</td>\n",
+       "      <td>1967-05-12</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0wJoRiX5K5BxlqZTolB2LD</td>\n",
+       "      <td>0.533</td>\n",
+       "      <td>0.905</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-5.270</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0754</td>\n",
+       "      <td>0.00876</td>\n",
+       "      <td>0.578000</td>\n",
+       "      <td>0.0698</td>\n",
+       "      <td>0.486</td>\n",
+       "      <td>108.900</td>\n",
+       "      <td>170813</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Born To Be Wild - Single Version</td>\n",
+       "      <td>Steppenwolf</td>\n",
+       "      <td>Steppenwolf</td>\n",
+       "      <td>1968-01-01</td>\n",
+       "      <td>66</td>\n",
+       "      <td>3lN8PP6R2IxbLP05QpYXng</td>\n",
+       "      <td>0.439</td>\n",
+       "      <td>0.734</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-12.168</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0970</td>\n",
+       "      <td>0.26200</td>\n",
+       "      <td>0.333000</td>\n",
+       "      <td>0.2440</td>\n",
+       "      <td>0.540</td>\n",
+       "      <td>145.703</td>\n",
+       "      <td>212893</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Oh, Pretty Woman</td>\n",
+       "      <td>Oh, Pretty Woman</td>\n",
+       "      <td>Roy Orbison</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>71</td>\n",
+       "      <td>48i055G1OT5KxGGftwFxWy</td>\n",
+       "      <td>0.619</td>\n",
+       "      <td>0.603</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-9.481</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0342</td>\n",
+       "      <td>0.71200</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0721</td>\n",
+       "      <td>0.958</td>\n",
+       "      <td>127.433</td>\n",
+       "      <td>178933</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The Weight - Remastered</td>\n",
+       "      <td>Music From Big Pink (Expanded Edition)</td>\n",
+       "      <td>The Band</td>\n",
+       "      <td>1968-07-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0sDqo9UPzPUtu9wEkI3zRB</td>\n",
+       "      <td>0.630</td>\n",
+       "      <td>0.519</td>\n",
+       "      <td>9</td>\n",
+       "      <td>-10.997</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0528</td>\n",
+       "      <td>0.22500</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>0.0974</td>\n",
+       "      <td>0.502</td>\n",
+       "      <td>143.942</td>\n",
+       "      <td>278627</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Hey Jude - Remastered 2015</td>\n",
+       "      <td>1 (Remastered)</td>\n",
+       "      <td>The Beatles</td>\n",
+       "      <td>2000-11-13</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0aym2LBJBk9DAYuHHutrIl</td>\n",
+       "      <td>0.386</td>\n",
+       "      <td>0.607</td>\n",
+       "      <td>10</td>\n",
+       "      <td>-7.700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0261</td>\n",
+       "      <td>0.01120</td>\n",
+       "      <td>0.000014</td>\n",
+       "      <td>0.0880</td>\n",
+       "      <td>0.532</td>\n",
+       "      <td>147.207</td>\n",
+       "      <td>425653</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               name                                   album  \\\n",
+       "0                       Purple Haze                     Are You Experienced   \n",
+       "1  Born To Be Wild - Single Version                             Steppenwolf   \n",
+       "2                  Oh, Pretty Woman                        Oh, Pretty Woman   \n",
+       "3           The Weight - Remastered  Music From Big Pink (Expanded Edition)   \n",
+       "4        Hey Jude - Remastered 2015                          1 (Remastered)   \n",
+       "\n",
+       "         artist release_date  popularity                      id  \\\n",
+       "0  Jimi Hendrix   1967-05-12          69  0wJoRiX5K5BxlqZTolB2LD   \n",
+       "1   Steppenwolf   1968-01-01          66  3lN8PP6R2IxbLP05QpYXng   \n",
+       "2   Roy Orbison         1962          71  48i055G1OT5KxGGftwFxWy   \n",
+       "3      The Band   1968-07-01           0  0sDqo9UPzPUtu9wEkI3zRB   \n",
+       "4   The Beatles   2000-11-13          72  0aym2LBJBk9DAYuHHutrIl   \n",
+       "\n",
+       "   danceability  energy  key  loudness  mode  speechiness  acousticness  \\\n",
+       "0         0.533   0.905    2    -5.270     1       0.0754       0.00876   \n",
+       "1         0.439   0.734    2   -12.168     1       0.0970       0.26200   \n",
+       "2         0.619   0.603    9    -9.481     1       0.0342       0.71200   \n",
+       "3         0.630   0.519    9   -10.997     1       0.0528       0.22500   \n",
+       "4         0.386   0.607   10    -7.700     1       0.0261       0.01120   \n",
+       "\n",
+       "   instrumentalness  liveness  valence    tempo  duration_ms  time_signature  \n",
+       "0          0.578000    0.0698    0.486  108.900       170813               4  \n",
+       "1          0.333000    0.2440    0.540  145.703       212893               4  \n",
+       "2          0.000000    0.0721    0.958  127.433       178933               4  \n",
+       "3          0.000004    0.0974    0.502  143.942       278627               4  \n",
+       "4          0.000014    0.0880    0.532  147.207       425653               4  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "97bfd823",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1684, 19)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.shape"
    ]
@@ -75,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "40dfe03e",
    "metadata": {},
    "outputs": [],
@@ -86,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "29c0da39",
    "metadata": {},
    "outputs": [],
@@ -104,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "5008b250",
    "metadata": {},
    "outputs": [],
@@ -119,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "48f30ec6",
    "metadata": {},
    "outputs": [],
@@ -134,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f41d98cb",
    "metadata": {},
    "outputs": [],
@@ -145,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "efb0b311",
    "metadata": {},
    "outputs": [],
@@ -159,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "54aefaf3",
    "metadata": {},
    "outputs": [],
@@ -179,23 +382,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c5dc35ed",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Recommends a given number of songs that are similar to a given song using minimum Euclidean distance.\n",
+    "Fits a music recommender using minimum Euclidean distance.\n",
     "\n",
     ":param df: song dataset dataframe\n",
     ":param given_track_id: ID of the track that should be used for the basis of recommendations\n",
-    ":param num_tracks: number of similar sogns that should be returned\n",
-    ":returns: list of tuples that contain the song names and IDs of the recommended songs\n",
+    ":returns: list of tuples of tracks and ids sorted by Euclidean distance\n",
     ":precondition: The given track ID is in df.\n",
-    ":precondition: num_tracks <= len(df)\n",
     ":precondition: The columns in dropped_cols are in df.\n",
     "\"\"\"\n",
-    "def min_euclid_dist_recommender(df, given_track_id, num_tracks):\n",
+    "def fit_min_euclid_dist_recommender(df, given_track_id):\n",
     "    df_cont = preprocess_df(df, 0.9)\n",
     "    \n",
     "    given_track_df = df_cont.loc[df_cont['id'] == given_track_id]\n",
@@ -209,11 +410,28 @@
     "        euclid_dist = np.linalg.norm(given_track_array - track_array)\n",
     "        track_distances.append((track_id, euclid_dist))\n",
     "\n",
-    "    sorted_tracks = sorted(track_distances, key=lambda x: x[1])\n",
-    "    \n",
+    "    return sorted(track_distances, key=lambda x: x[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "74b1df01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    ":param sorted_tracks: list of sorted tracks returned from fit_min_euclid_dist_recommender\n",
+    ":param num_tracks: number of similar sogns that should be returned\n",
+    ":param closeness_index: determines how similar the recommended songs are, with 0 being the most similar\n",
+    ":returns: list of tuples that contain the song names and IDs of the recommended songs\n",
+    ":precondition: num_tracks < len(df)\n",
+    ":precondition: closeness_index >= 0 and closeness_index+num_tracks < len(df)\n",
+    "\"\"\"\n",
+    "def min_euclid_dist_recommender(sorted_tracks, num_tracks, closeness_index):\n",
     "    rec_songs = []\n",
-    "    for index in range(num_tracks):\n",
-    "        song_df = df[df['id']==sorted_tracks[index+1][0]]\n",
+    "    for i in range(num_tracks):\n",
+    "        song_df = df[df['id']==sorted_tracks[i+1+closeness_index][0]]\n",
     "        rec_song = (song_df.iloc[0]['name'], song_df.iloc[0]['id'])\n",
     "        rec_songs.append(rec_song)\n",
     "    \n",
@@ -222,22 +440,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "78ce96e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>album</th>\n",
+       "      <th>artist</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>id</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>loudness</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>acousticness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>time_signature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>927</th>\n",
+       "      <td>Drag Me Down</td>\n",
+       "      <td>Made In The A.M. (Deluxe Edition)</td>\n",
+       "      <td>One Direction</td>\n",
+       "      <td>2015-11-13</td>\n",
+       "      <td>79</td>\n",
+       "      <td>2K87XMYnUMqLcX3zvtAF4G</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.703</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-5.672</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0369</td>\n",
+       "      <td>0.109</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0657</td>\n",
+       "      <td>0.595</td>\n",
+       "      <td>138.113</td>\n",
+       "      <td>192120</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             name                              album         artist  \\\n",
+       "927  Drag Me Down  Made In The A.M. (Deluxe Edition)  One Direction   \n",
+       "\n",
+       "    release_date  popularity                      id  danceability  energy  \\\n",
+       "927   2015-11-13          79  2K87XMYnUMqLcX3zvtAF4G          0.73   0.703   \n",
+       "\n",
+       "     key  loudness  mode  speechiness  acousticness  instrumentalness  \\\n",
+       "927    0    -5.672     0       0.0369         0.109               0.0   \n",
+       "\n",
+       "     liveness  valence    tempo  duration_ms  time_signature  \n",
+       "927    0.0657    0.595  138.113       192120               4  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df[df['name']=='Drag Me Down']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1715d142",
+   "execution_count": 15,
+   "id": "a588bfce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rec_songs = min_euclid_dist_recommender(df, '2K87XMYnUMqLcX3zvtAF4G', 5)\n",
+    "sorted_tracks = fit_min_euclid_dist_recommender(df, '2K87XMYnUMqLcX3zvtAF4G')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1715d142",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Down', '6cmm1LMvZdB5zsCwX5BjqE'), ('Only Girl (In The World)', '0AH6WMe3OlAlUb5miXt2FQ'), ('Call Me Maybe', '20I6sIOMTCkB6w7ryavxtO'), ('Bad Boy', '5GKwq4sO5ZHKuWaDmdwMQc'), ('Stitches', '3zkWCteF82vJwv0hRLba76')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rec_songs = min_euclid_dist_recommender(sorted_tracks, 5, 0)\n",
     "print(rec_songs)"
    ]
   },
